--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <label id="finder" for="password-input">password</label>
     <input id="password-input" type="password" name="loginPassword">
     <br>
-    <button style="margin-top: 10px">log in</button>
+    <button style="margin-top: 10px; border-radius: 5px; background-color: white">log in</button>
     </form>
   </div>
   <div class="signup">
@@ -30,7 +30,7 @@
       <label id="finder" for="password-input">password</label>
       <input id="password-input" type="password" name="passwordInput">
       <br>
-      <button style="margin-top: 10px">Sign Up</button
+      <button style="margin-top: 10px; border-radius: 5px; background-color: white">sign up</button
     </form>
 </div>
 </div>
